# lingos-kernel

./: execute.py  genesis.py  pyproject.toml
mirrordna_glyph/: __init__.py  core.py  crypto.py  registry.py  runtime.py  stdlib.py
